--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -2,8 +2,13 @@ name: Build and Test Docker Image
 
 on:
   workflow_call:
+    inputs:
+      archive:
+        required: false
+        type: boolean
+        default: false
   pull_request:
-    branches: [ "master", "github-actions" ]
+    branches: [ "master" ]
 
 jobs:
 
@@ -28,3 +33,14 @@ jobs:
       
     - name: Test Docker Image
       run: make test
+
+    - name: Export Docker Image
+      if: ${{ inputs.archive && github.ref == 'refs/heads/master' }}
+      run: docker save --output docker-image.tar mosquitto-unraid
+
+    - name: Upload Docker Image
+      uses: actions/upload-artifact@v3
+      if: ${{ inputs.archive && github.ref == 'refs/heads/master' }}
+      with:
+        name: docker-image
+        path: docker-image.tar
